--- a/BugHunter/src/main/resources/application.properties
+++ b/BugHunter/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.thymeleaf.cache = false
+spring.datasource.url=jdbc:mariadb://localhost:3306/lp3user
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
