--- a/BugHunter2/pom.xml
+++ b/BugHunter2/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.6</version>
+		<version>3.1.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>lp3.grupal</groupId>
-	<artifactId>BugHunter</artifactId>
+	<artifactId>BugHunter2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>BugHunter</name>
-	<description></description>
+	<name>BugHunter2</name>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -51,27 +51,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-                
-                <dependency>
-                    <groupId>org.webjars</groupId>
-                    <artifactId>bootstrap</artifactId>
-                    <version>5.2.3</version>
-                </dependency>
-                
-                 <dependency>
-                    <groupId>org.webjars</groupId>
-                    <artifactId>font-awesome</artifactId>
-                    <version>6.4.0</version>
-                </dependency>
-                
-                <dependency>
-                    <groupId>org.webjars</groupId>
-                    <artifactId>webjars-locator</artifactId>
-                    <version>0.46</version>
-                </dependency>
-                
-                
-                
 	</dependencies>
 
 	<build>
