--- a/BugHunter2/src/main/resources/application.properties
+++ b/BugHunter2/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.thymeleaf.cache = false
-spring.datasource.url=jdbc:mariadb://localhost:3306/lp3user
+spring.datasource.url=jdbc:mariadb://localhost:3306/lp3
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
 
