--- a/BugHunter2/pom.xml
+++ b/BugHunter2/pom.xml
@@ -23,17 +23,35 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
+			<optional>true</optional>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-configuration-processor</artifactId>
+                        <version>3.1.0</version>
+                </dependency>
+                <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -42,38 +60,45 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+                <dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>bootstrap</artifactId>
+                        <version>5.2.3</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>font-awesome</artifactId>
+                        <version>6.4.0</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>webjars-locator</artifactId>
+                        <version>0.46</version>
+                </dependency>
                 
                 <dependency>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-security</artifactId>
+                    <groupId>io.jsonwebtoken</groupId>
+                    <artifactId>jjwt-api</artifactId>
+                    <version>0.11.5</version>
                 </dependency>
                 
-                <dependency>
-                    <groupId>org.webjars</groupId>
-                    <artifactId>bootstrap</artifactId>
-                    <version>5.2.3</version>
-                </dependency>
-                
-                 <dependency>
-                    <groupId>org.webjars</groupId>
-                    <artifactId>font-awesome</artifactId>
-                    <version>6.4.0</version>
-                </dependency>
-                
-                <dependency>
-                    <groupId>org.webjars</groupId>
-                    <artifactId>webjars-locator</artifactId>
-                    <version>0.46</version>
-                </dependency>
+    <dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt</artifactId>
+    <version>0.9.1</version>
+    </dependency>
+	
+         
+         
 	</dependencies>
 
 	<build>
